--- a/BinaryAutomataCheckingTests/BinaryAutomataCheckingTests.csproj
+++ b/BinaryAutomataCheckingTests/BinaryAutomataCheckingTests.csproj
@@ -12,4 +12,9 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BinaryAutomataChecking\BinaryAutomataChecking.csproj" />
+    <ProjectReference Include="..\CoreDefinitions\CoreDefinitions.csproj" />
+  </ItemGroup>
+
 </Project>
