--- a/CoreServer/CoreServer.csproj
+++ b/CoreServer/CoreServer.csproj
@@ -9,4 +9,7 @@
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.4" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CoreDefinitions\CoreDefinitions.csproj" />
+  </ItemGroup>
 </Project>
