Added material design

--- a/Presentation/packages.config
+++ b/Presentation/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="MaterialSkin" version="0.2.1" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Connections.Abstractions" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Http.Connections.Client" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Http.Connections.Common" version="1.1.0" targetFramework="net461" />
