Cleaned communication between server and client

--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BinaryAutomataChecking\BinaryAutomataChecking.csproj" />
+    <ProjectReference Include="..\CommunicationContracts\CommunicationContracts.csproj" />
     <ProjectReference Include="..\CoreDefinitions\CoreDefinitions.csproj" />
   </ItemGroup>
 
