Added support for MessagePack (binary format)

--- a/Presentation/packages.config
+++ b/Presentation/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="MaterialSkin" version="0.2.1" targetFramework="net461" />
+  <package id="MessagePack" version="1.7.3.4" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Connections.Abstractions" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Http.Connections.Client" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Http.Connections.Common" version="1.1.0" targetFramework="net461" />
@@ -9,6 +10,7 @@
   <package id="Microsoft.AspNetCore.SignalR.Client.Core" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.SignalR.Common" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.SignalR.Protocols.Json" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Configuration" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Configuration.Binder" version="2.2.0" targetFramework="net461" />
@@ -27,4 +29,5 @@
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="net461" />
   <package id="System.Threading.Channels" version="4.5.0" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.3.0" targetFramework="net461" />
 </packages>
