More robust connection, added README

--- a/.gitignore
+++ b/.gitignore
@@ -262,3 +262,4 @@ __pycache__/
 /CoreServer/8export.xml
 /CoreServer/8-100-export.xml
 /CoreServer/computation-history-8-100.xml
+/CoreServer/computation-history-7-100.xml
