Improved communication and client speed

--- a/.gitignore
+++ b/.gitignore
@@ -263,3 +263,4 @@ __pycache__/
 /CoreServer/8-100-export.xml
 /CoreServer/computation-history-8-100.xml
 /CoreServer/computation-history-7-100.xml
+/CoreServer/computation-history-9-100.xml
